Add condition classes and zone shapes for enhanced gameplay mechanics